# telegram-commandcode

./: .env.example  .gitignore  AGENTS.md  README.md  bot.js  discord.js  index.js  package-lock.json  package.json  pyproject.toml  telegram-commandcode.service
telegram_commandcode/: __init__.py  bot.py  chunking.py  commands.py  executor.py  formatter.py  gateway.py  session.py
telegram_commandcode/commands/: __init__.py  base.py  cli_cmds.py  config_cmds.py  info_cmds.py  prompt_cmds.py  router.py  session_cmds.py
telegram_commandcode/gateway/: __init__.py  gateway.py  media.py  processor.py  router.py  sender.py
