[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-commandcode"
version = "2.0.0"
description = "Async Python Telegram bot bridging Telegram ↔ Command Code CLI — Hermes Agent architecture patterns"
authors = [{ name = "qrak" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=20.8,<22",
    "httpx>=0.27",
]

[project.optional-dependencies]
voice = ["openai>=1.0"]

[project.scripts]
telegram-commandcode = "telegram_commandcode.bot:main"

[tool.hatch.build.targets.wheel]
packages = ["telegram_commandcode"]
